[gd_scene load_steps=3 format=3 uid="uid://cp1xgv8y1d6im"]

[ext_resource type="Script" uid="uid://d26styy8pimey" path="res://resources/ui/hud.gd" id="1_uwtu8"]
[ext_resource type="LabelSettings" uid="uid://b62gn8gde8nkq" path="res://resources/ui/default_label_settings.tres" id="2_kvk0d"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_uwtu8")

[node name="HudRoot" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 3
mouse_filter = 2

[node name="Crosshair" type="Control" parent="HudRoot"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.0
offset_top = -5.0
offset_right = 5.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Dot" type="ColorRect" parent="HudRoot/Crosshair"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1.0
offset_top = -1.0
offset_right = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Vitality" type="Control" parent="HudRoot"]
layout_mode = 1
anchors_preset = 0
offset_right = 100.0
offset_bottom = 50.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.3, 0.3)

[node name="VBoxContainer" type="VBoxContainer" parent="HudRoot/Vitality"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 1
offset_right = 100.0
offset_bottom = 50.0

[node name="Hp" type="Label" parent="HudRoot/Vitality/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Hp: _"
label_settings = ExtResource("2_kvk0d")
vertical_alignment = 1

[node name="HpMax" type="Label" parent="HudRoot/Vitality/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Hp Max: _"
label_settings = ExtResource("2_kvk0d")
vertical_alignment = 1

[node name="Carries" type="Control" parent="HudRoot"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
scale = Vector2(0.3, 0.3)

[node name="VBoxContainer" type="VBoxContainer" parent="HudRoot/Carries"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -50.0
grow_horizontal = 0
grow_vertical = 0
alignment = 2

[node name="HandLeft" type="Label" parent="HudRoot/Carries/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "_ :Left"
label_settings = ExtResource("2_kvk0d")
horizontal_alignment = 2
vertical_alignment = 1

[node name="HandRight" type="Label" parent="HudRoot/Carries/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "_ :Right"
label_settings = ExtResource("2_kvk0d")
horizontal_alignment = 2
vertical_alignment = 1

[node name="Abilities" type="Control" parent="HudRoot"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(0.3, 0.3)

[node name="VBoxContainer" type="VBoxContainer" parent="HudRoot/Abilities"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -25.0
offset_right = 100.0
offset_bottom = 25.0
grow_vertical = 2

[node name="Header" type="Label" parent="HudRoot/Abilities/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Abilities:"
label_settings = ExtResource("2_kvk0d")

[node name="Locomotion" type="Control" parent="HudRoot"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
scale = Vector2(0.3, 0.3)

[node name="VBoxContainer" type="VBoxContainer" parent="HudRoot/Locomotion"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -50.0
offset_right = 100.0
grow_vertical = 0
alignment = 2

[node name="Speed" type="Label" parent="HudRoot/Locomotion/VBoxContainer"]
layout_mode = 2
text = "Speed: _"
label_settings = ExtResource("2_kvk0d")

[node name="Velocity" type="Label" parent="HudRoot/Locomotion/VBoxContainer"]
layout_mode = 2
text = "Velocity: _"
label_settings = ExtResource("2_kvk0d")

[node name="Direction" type="Label" parent="HudRoot/Locomotion/VBoxContainer"]
layout_mode = 2
text = "Direction: (_,_)"
label_settings = ExtResource("2_kvk0d")
